# ApricotFields

./: .clang-format  .gitignore  CMakeLists.txt
include/: apricore.h  apricot_math.h  apricotfields.h  apricotfields.hpp  aprimath.h
include/cad/: apcadbase.h  apcaddraw.h  apcadinference.h  apcadmesh.h  apcadraycast.h  apcadsolid.h  apcadtools.h
include/render/: aprendbase.h  aprendbuffers.h  aprendframes.h  aprendimages.h  aprendscene.h  apricot_renderer.h  apricotrender.hpp
include/sync/: apsyncnet.h
shaders/: apricot_default.vert
src/: apricore.cpp  apricotfields.cpp
src/cad/: apcad_internal.hpp  apcaddraw.cpp  apcadinference.cpp  apcadmesh.cpp  apcadraycast.cpp  apcadsolid.cpp  apcadtools.cpp
src/render/: aprend_internal.hpp  aprendbase.cpp  aprendbuffers.cpp  aprendframes.cpp  aprendimages.cpp  aprendimages_internal.hpp  aprendscene.cpp  apricot_renderer_internal.hpp  apricotrender.cpp
src/sync/: apsync_internal.hpp  apsyncnet.cpp
